...
            modifier = Modifier
                .fillMaxWidth(0.8f)
                .height(52.dp),
            contentPadding = ButtonDefaults.contentPaddingFor(52.dp),
        ) {
            Text(
                text = "生物識別解鎖",
                style = MaterialTheme.typography.titleMedium,
                fontWeight = FontWeight.SemiBold
            )
        }

        Spacer(modifier = Modifier.height(16.dp))
...
            shapes = ButtonDefaults.shapes(),
            colors = ButtonDefaults.textButtonColors(
                contentColor = MaterialTheme.colorScheme.primary
            )
        ) {
            Text(
                text = "使用備用密碼解鎖",
                style = MaterialTheme.typography.bodyMedium,
                fontWeight = FontWeight.SemiBold
            )
        }

        Spacer(modifier = Modifier.height(8.dp))
...
